# physical-ai-robotics-textbook

./: CHAPTER_0_3_FINAL_SUMMARY.txt  CHAPTER_1_1_DELIVERY.md  Cfinal_summary.txt  Ctemp_validation.txt  DELIVERY_SUMMARY.md  IMPLEMENTATION_STATUS.md  PRODUCTION_VALIDATION_REPORT.md  SPEC4_COMPLETION_SUMMARY.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tailwind.config.js
.claude/agents/: md-chapter-generator.md  ui-designer.md
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  Procfile  README.md  RETRIEVE_API.md  agent.py  pyproject.toml  requirements.txt  retrieve.py  test_retrieval.py
backend/ingestion/: __init__.py  __main__.py  checkpoint.py  chunker.py  config.py  crawler.py  embedder.py  main.py  qdrant_storage.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_agent_live.py  test_crawl_and_chunk.py  test_full_pipeline.py  test_retrieve_live.py
backend/tests/unit/: test_agent.py  test_chunker.py  test_crawler.py  test_embedder.py  test_qdrant_storage.py  test_retrieve.py
code-examples/: README.md
design-reference/: landing-page.md
docs/: glossary.md  intro.md
docs/assets/: STYLE_GUIDE.md  chapter-template.txt  humanoid-example.urdf  lab-template.txt
docs/capstone/: 01-requirements.md  02-grading-rubrics.md  03-example-projects.md  04-deployment-guide.md
docs/hardware-setup/: 01-minimum-requirements.md  02-recommended-setup.md  03-optional-unitree-deployment.md  04-safety-protocols.md
docs/module-0-foundations/: 01-what-is-physical-ai.md  02-why-physical-ai-matters.md  03-humanoid-robotics-landscape.md  04-learning-path-and-prerequisites.md  05-module-0-summary.md  intro.md
docs/module-0-prerequisites/: intro.md  learning-path.md
docs/module-1-ros2/: 01-module-intro.md  02-architecture-overview.md  03-nodes-topics-services.md  04-actions-and-timers.md  05-python-with-rclpy.md  06-launch-files-and-parameters.md  07-module-1-summary.md  lab-1-1-your-first-node.md  lab-1-2-implement-a-service.md  lab-1-3-create-a-ros2-package.md
docs/module-2-simulation/: 01-gazebo-basics-and-physics.md  02-urdf-and-robot-descriptions.md  03-sensors-in-gazebo.md  04-unity-for-robotics.md  05-sim-to-real-considerations.md  06-module-2-summary.md  intro.md  lab-2-1-load-robot-in-gazebo.md  lab-2-2-publish-sensor-data.md  lab-2-3-control-robot-in-simulation.md
docs/module-3-isaac/: 01-isaac-sim-overview-and-workflows.md  02-building-isaac-environments.md  03-slam-and-autonomous-navigation.md  04-isaac-ros-integration.md  05-object-detection-and-manipulation.md  06-module-3-summary.md  intro.md  lab-3-1-create-isaac-sim-environment.md  lab-3-2-implement-slam-pipeline.md  lab-3-3-autonomous-navigation-task.md
docs/module-4-vla/: 01-vla-complete-guide.md  02-module-4-summary.md  intro.md  lab-4-1-language-to-action-pipeline.md  lab-4-2-voice-command-processing.md  lab-4-3-capstone-project-autonomous-humanoid.md
history/adr/: 001-docusaurus-markdown-github-pages.md  002-simulation-first-hardware-optional.md  003-modular-progressive-capstone-integrated.md
source-material/: brief.md
specs/003-rag-agent-api/: plan.md  (+4 more)
(+73 files in other folders)
